Replace `Arrays.asList` with `List.of` in tests
Use this link to re-run the recipe: https://app.moderne.io/builder/VUxszwdBH?organizationId=QUxML01vZGVybmUvTW9kZXJuZSArIE9wZW5SZXdyaXRl

Co-authored-by: Moderne <team@moderne.io>